# recursive_feedback_loop

./: .gitignore  AI_GUIDE.md  CASE_STUDY_SELF_AUDIT.md  README.md  pyproject.toml  rfl_ouroboros  seed_canvas.txt
recursive_feedback_loop/: __init__.py  agents.py  build.py  cli.py  compaction.py  config.py  evolve.py  issue_parser.py  loop_runner.py  report.py  roundtable.py  seed_builder.py  session_mode.py  session_reader.py  templates.py
recursive_feedback_loop/templates/audit/: seed.md  template.yaml
recursive_feedback_loop/templates/bug-hunt/: seed.md  template.yaml
recursive_feedback_loop/templates/creative/: template.yaml
recursive_feedback_loop/templates/feature/: seed.md  template.yaml
recursive_feedback_loop/templates/security/: seed.md  template.yaml
recursive_feedback_loop/templates/spec-review/: seed.md  template.yaml
rfl_autoresearch/: README.md  __init__.py  __main__.py  analysis.ipynb  experiment.py  program.md  test_scoring.py
tests/: test_agents.py  test_compaction.py  test_config.py  test_loop_runner.py  test_roundtable.py  test_session_reader.py
