[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recursive_feedback_loop"
version = "0.1.0"
description = "Recursive Feedback Loop — AI self-feeding conversation engine"
requires-python = ">=3.10"

[project.scripts]
rfl = "recursive_feedback_loop.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
